Add Create Feature.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.jar=${dist.dir}/UjicobaInventori.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.joda-time-2.4.jar=C:\\Users\\Kiddy\\Documents\\TempJava\\joda-time-2.4.jar
+file.reference.rs2xml.jar=C:\\Users\\Kiddy\\Documents\\TempJava\\rs2xml.jar
 file.reference.sqljdbc4.jar=C:\\Users\\Kiddy\\Documents\\TempJava\\sqljdbc4.jar
 file.reference.swingx-all-1.6.4.jar=C:\\Users\\Kiddy\\Documents\\TempJava\\swingx-all-1.6.4.jar
 includes=**
@@ -35,7 +36,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.joda-time-2.4.jar}:\
     ${file.reference.sqljdbc4.jar}:\
-    ${file.reference.swingx-all-1.6.4.jar}
+    ${file.reference.swingx-all-1.6.4.jar}:\
+    ${file.reference.rs2xml.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
